--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<img src="logo.png" alt="logo" height="150px;">
       </div>
       <div id="titlebanner">
-	<h1 class="title">Bærekraftig Oslo-guide</h1>
-	<h3 class="title">For å gjøre det enklere for deg å finne aktører i Oslo som driver bærekraftig</h3>
+	<h1 class="title">Grønn byguide Stavanger</h1>
+	<h3 class="title">For å gjøre det enklere for deg å finne aktører i Stavanger som driver bærekraftig</h3>
       </div>
     </div>
 
